--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -46,6 +46,7 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
     <string name="restrict_clipboard">Schránka</string>
     <string name="restrict_contacts">Kontakty</string>
     <string name="restrict_dictionary">Slovník (uživatele)</string>
+    <string name="restrict_email">E-mail</string>
     <string name="restrict_identification">Identifikace (zařízení)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Poloha (přesná/přibližná)</string>
