--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -46,6 +46,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="restrict_clipboard">Presse-papiers</string>
     <string name="restrict_contacts">Contacts</string>
     <string name="restrict_dictionary">Dictionnaire (utilisateur)</string>
+    <string name="restrict_email">E-mail</string>
     <string name="restrict_identification">Identification (Matériel)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Localisation (précise/approximative)</string>
