--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -46,6 +46,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">אנשי קשר</string>
     <string name="restrict_dictionary">מילון (משתמש)</string>
+    <string name="restrict_email">E-mail</string>
     <string name="restrict_identification">זיהוי (מכשיר)</string>
     <string name="restrict_internet">אינטרנט</string>
     <string name="restrict_location">מיקום (fine/coarse)</string>
