--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -46,6 +46,7 @@
     <string name="restrict_clipboard">Appunti</string>
     <string name="restrict_contacts">Contatti</string>
     <string name="restrict_dictionary">Dizionario (utente)</string>
+    <string name="restrict_email">E-mail</string>
     <string name="restrict_identification">Identificazione (dispositivo)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Posizione (precisa/grossolana)</string>
