--- a/res/values-nb-rNO/strings.xml
+++ b/res/values-nb-rNO/strings.xml
@@ -44,6 +44,7 @@
     <string name="restrict_clipboard">Utklippstavle</string>
     <string name="restrict_contacts">Kontakter</string>
     <string name="restrict_dictionary">Ordbok (bruker)</string>
+    <string name="restrict_email">E-mail</string>
     <string name="restrict_identification">Identifikasjon (enhet)</string>
     <string name="restrict_internet">Internett</string>
     <string name="restrict_location">Posisjon (fin/grov)</string>
