--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -46,6 +46,7 @@
     <string name="restrict_clipboard">Schowek</string>
     <string name="restrict_contacts">Kontakty</string>
     <string name="restrict_dictionary">Słownik (użytkownik)</string>
+    <string name="restrict_email">E-mail</string>
     <string name="restrict_identification">Identyfikacja (urządzenie)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Położenie (dokładne/przybliżone)</string>
