--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -46,6 +46,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Contacte</string>
     <string name="restrict_dictionary">Dictionary (user)</string>
+    <string name="restrict_email">E-mail</string>
     <string name="restrict_identification">Date de identificare (dispozitivul propriu)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Locatie (fina/in mare)</string>
