--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -46,6 +46,7 @@
     <string name="restrict_clipboard">Буфер обмена</string>
     <string name="restrict_contacts">Контакты</string>
     <string name="restrict_dictionary">Пользовательский словарь</string>
+    <string name="restrict_email">E-mail</string>
     <string name="restrict_identification">Идентификация устройства</string>
     <string name="restrict_internet">Интернет</string>
     <string name="restrict_location">Местоположение (точное/приблизительное)</string>
