--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -46,6 +46,7 @@
     <string name="restrict_clipboard">Odložišče</string>
     <string name="restrict_contacts">Stiki</string>
     <string name="restrict_dictionary">Slovar (uporabnik)</string>
+    <string name="restrict_email">E-mail</string>
     <string name="restrict_identification">Identifikacija (naprava)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Lokacija (približna/natančna)</string>
