--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -46,6 +46,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Контакти</string>
     <string name="restrict_dictionary">Речник (кориснички)</string>
+    <string name="restrict_email">E-mail</string>
     <string name="restrict_identification">Идентификација (уређај)</string>
     <string name="restrict_internet">Интернет</string>
     <string name="restrict_location">Локација (фина/груба)</string>
