--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,7 +50,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_clipboard">Clipboard</string>
     <string name="restrict_contacts">Contacts</string>
     <string name="restrict_dictionary">Dictionary (user)</string>
-    <string name="restrict_email" translatable="false">E-mail</string>
+    <string name="restrict_email">E-mail</string>
     <string name="restrict_identification">Identification (device)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Location (fine/coarse)</string>
