--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -26,7 +26,8 @@
     <string name="menu_app_store">Trgovina Play</string>
     <string name="menu_accounts">Izberi dovoljene račune</string>
     <string name="menu_contacts">Izberi dovoljene stike</string>
-    <string name="msg_noupdate">Na voljo ni posodobitev</string>
+    <string name="msg_new">New</string>
+    <string name="msg_update">Update</string>
     <string name="msg_restricted" formatted="false">Pravica %s omejena s programom XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencirano na: %s</string>
     <string name="msg_loading">Nalagam</string>
