--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -26,7 +26,8 @@
     <string name="menu_app_store">Obchod Play</string>
     <string name="menu_accounts">Povolené účty aplikace</string>
     <string name="menu_contacts">Povolené kontakty aplikace</string>
-    <string name="msg_noupdate">Není k dispozici žádná aktualizace</string>
+    <string name="msg_new">New</string>
+    <string name="msg_update">Update</string>
     <string name="msg_restricted" formatted="false">XPrivacy omezilo %s</string>
     <string name="msg_licensed" formatted="false">Licencováno na: %s</string>
     <string name="msg_loading">Probíhá načítání</string>
