--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -26,7 +26,8 @@
     <string name="menu_app_store">Im Play Store anzeigen</string>
     <string name="menu_accounts">Konten für Zugriff freigeben</string>
     <string name="menu_contacts">Kontakte für Zugriff freigeben</string>
-    <string name="msg_noupdate">Die neueste Version ist bereits installiert</string>
+    <string name="msg_new">New</string>
+    <string name="msg_update">Update</string>
     <string name="msg_restricted" formatted="false">%s beschränkt durch XPrivacy</string>
     <string name="msg_licensed" formatted="false">Lizenziert für: %s</string>
     <string name="msg_loading">Lade...</string>
