--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -26,7 +26,8 @@
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Seleccione las cuentas permitidas</string>
     <string name="menu_contacts">Seleccione los contactos permitidos</string>
-    <string name="msg_noupdate">No hay actualizaciones disponibles</string>
+    <string name="msg_new">New</string>
+    <string name="msg_update">Update</string>
     <string name="msg_restricted">%s restringido por XPrivacy</string>
     <string name="msg_licensed">Con licencia para: %s</string>
     <string name="msg_loading">Cargando</string>
