--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -26,7 +26,8 @@
     <string name="menu_app_store">חנות Google Play</string>
     <string name="menu_accounts">בחר חשבונות לאפשר</string>
     <string name="menu_contacts">בחר אנשי קשר לאפשר</string>
-    <string name="msg_noupdate">אין עדכונים</string>
+    <string name="msg_new">New</string>
+    <string name="msg_update">Update</string>
     <string name="msg_restricted" formatted="false">%s מוגבל על ידי XPrivacy</string>
     <string name="msg_licensed" formatted="false">יישום מורשה ל: %s</string>
     <string name="msg_loading">טוען</string>
