--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -26,7 +26,8 @@
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Geef accounts toestemming</string>
     <string name="menu_contacts">Geef contacten toestemming</string>
-    <string name="msg_noupdate">Geen nieuwe versie beschikbaar</string>
+    <string name="msg_new">Nieuw</string>
+    <string name="msg_update">Bijgewerkt</string>
     <string name="msg_restricted" formatted="false">%s beperkt door XPrivacy</string>
     <string name="msg_licensed" formatted="false">In licentie gegeven aan: %s</string>
     <string name="msg_loading">Laden</string>
