--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -26,7 +26,8 @@
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Wybierz dozwolone konta</string>
     <string name="menu_contacts">Wybierz dozwolone kontakty</string>
-    <string name="msg_noupdate">Brak aktualizacji</string>
+    <string name="msg_new">New</string>
+    <string name="msg_update">Update</string>
     <string name="msg_restricted" formatted="false">%s jest ograniczone przez XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencjonowane dla: %s</string>
     <string name="msg_loading">Ładowanie</string>
