--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -26,7 +26,8 @@
     <string name="menu_app_store">Продавница Плеј</string>
     <string name="menu_accounts">Изабери дозвољене рачуне</string>
     <string name="menu_contacts">Изабери дозвољене контакте</string>
-    <string name="msg_noupdate">Нема апдејта</string>
+    <string name="msg_new">New</string>
+    <string name="msg_update">Update</string>
     <string name="msg_restricted" formatted="false">%s restricted by XPrivacy</string>
     <string name="msg_licensed" formatted="false">Лиценциран %s</string>
     <string name="msg_loading">Учитавање</string>
