--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,7 +30,8 @@
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Select accounts to allow</string>
     <string name="menu_contacts">Select contacts to allow</string>
-    <string name="msg_noupdate">No update available</string>
+    <string name="msg_new">New</string>
+    <string name="msg_update">Update</string>
     <string name="msg_restricted" formatted="false">%s restricted by XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
     <string name="msg_loading">Loading</string>
