--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -26,8 +26,8 @@
     <string name="menu_app_store">متجر قوقل</string>
     <string name="menu_accounts">إختر الحسابات التي تود تمكينها</string>
     <string name="menu_contacts">إختر الأسماء التي تود تمكينها</string>
-    <string name="msg_new">New</string>
-    <string name="msg_update">Update</string>
+    <string name="msg_new">جديد</string>
+    <string name="msg_update">تحديث</string>
     <string name="msg_restricted" formatted="false">%s تم تقيده بواسطة XPrivacy</string>
     <string name="msg_licensed" formatted="false">مرخص ل: %s</string>
     <string name="msg_loading">جاري التحميل</string>
@@ -47,7 +47,7 @@
     <string name="restrict_clipboard">الحافظة</string>
     <string name="restrict_contacts">الأسماء</string>
     <string name="restrict_dictionary">القاموس (المستخدم)</string>
-    <string name="restrict_email">E-mail</string>
+    <string name="restrict_email">البريد الإلكتروني</string>
     <string name="restrict_identification">الهوية (الجهاز)</string>
     <string name="restrict_internet">الإنترنت</string>
     <string name="restrict_location">تحديد الموقع (ناعم,خشن)</string>
