--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -27,7 +27,7 @@
     <string name="menu_accounts">Povolené účty</string>
     <string name="menu_contacts">Povolené kontakty</string>
     <string name="msg_new">Nové</string>
-    <string name="msg_update">Atualizácia</string>
+    <string name="msg_update">Aktualizácia</string>
     <string name="msg_restricted" formatted="false">%s obmedzené pomocou XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencované na: %s</string>
     <string name="msg_loading">Prebieha načítavanie</string>
