--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -26,8 +26,8 @@
     <string name="menu_app_store">Playストア</string>
     <string name="menu_accounts">許可するアカウントを選択</string>
     <string name="menu_contacts">許可する電話帳を選択</string>
-    <string name="msg_new">New</string>
-    <string name="msg_update">Update</string>
+    <string name="msg_new">新規</string>
+    <string name="msg_update">更新</string>
     <string name="msg_restricted" formatted="false">%s をXPrivacyが制限しました</string>
     <string name="msg_licensed" formatted="false">ライセンス先: %s</string>
     <string name="msg_loading">読み込み中</string>
@@ -47,7 +47,7 @@
     <string name="restrict_clipboard">クリップボード</string>
     <string name="restrict_contacts">電話帳</string>
     <string name="restrict_dictionary">辞書 (ユーザー)</string>
-    <string name="restrict_email">E-mail</string>
+    <string name="restrict_email">メール</string>
     <string name="restrict_identification">ID (端末)</string>
     <string name="restrict_internet">インターネット</string>
     <string name="restrict_location">位置情報 (高/低精度)</string>
@@ -79,11 +79,11 @@
     <string name="settings_country">国</string>
     <string name="settings_operator">キャリア</string>
     <string name="settings_subscriber">契約者固有ID</string>
-    <string name="settings_ua">User agent</string>
+    <string name="settings_ua">ユーザーエージェント</string>
     <string name="settings_fpermission">権限でフィルタ</string>
     <string name="settings_fapplication">アプリタイプでフィルタ</string>
     <string name="settings_log">デバッグログ(要再起動)</string>
-    <string name="filter_used">データ使用率でフィルタ</string>
+    <string name="filter_used">データ使用でフィルタ</string>
     <string name="filter_internet">ネット接続でフィルタ</string>
     <string name="filter_restricted">制限済みでフィルタ</string>
     <string name="filter_app_sys">システムアプリ</string>
