--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -26,8 +26,8 @@
     <string name="menu_app_store">Play 商店</string>
     <string name="menu_accounts">选择允许的帐号</string>
     <string name="menu_contacts">选择允许的联系人</string>
-    <string name="msg_new">New</string>
-    <string name="msg_update">Update</string>
+    <string name="msg_new">新装</string>
+    <string name="msg_update">升级</string>
     <string name="msg_restricted" formatted="false">%s 被 XPrivacy 限制</string>
     <string name="msg_licensed" formatted="false">已授权给: %s</string>
     <string name="msg_loading">加载中</string>
@@ -79,7 +79,7 @@
     <string name="settings_country">国家</string>
     <string name="settings_operator">运营商</string>
     <string name="settings_subscriber">IMSI</string>
-    <string name="settings_ua">User agent</string>
+    <string name="settings_ua">UA</string>
     <string name="settings_fpermission">无关权限过滤</string>
     <string name="settings_fapplication">按应用级别过滤</string>
     <string name="settings_log">调试日志 (需要重启)</string>
