--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -22,7 +22,7 @@
     <string name="menu_all">Alles</string>
     <string name="menu_clear">Wissen</string>
     <string name="menu_app_launch">Uitvoeren</string>
-    <string name="menu_app_settings">Instellingen</string>
+    <string name="menu_app_settings">Applicatie details</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Geef accounts toestemming</string>
     <string name="menu_contacts">Geef contacten toestemming</string>
